<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" >
    <string name="app_name">Just Java</string>
    <string name="chocolate">Chocolate</string>
    <string name="initial_quantity_value">0</string>
    <string name="name">Name</string>
    <string name="order">Order</string>
    <string name="quantity">Quantity</string>
    <string name="thank_you">Thank You!</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="order_summery">Order Summery</string>
    <string name="total_price">$0</string>
    <string name="order_via_email">Order Via Email</string>

    <string name="order_summary_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_summary_whipped_cream">Add Whipped Cream? <xliff:g id="addWhippedCream" example="true">%b</xliff:g></string>
    <string name="order_summary_chocolate">Add Chocolate? <xliff:g id="addChocolate" example="true">%b</xliff:g></string>
    <string name="order_summary_quantity">Quantity: <xliff:g id="quantity" example="0">%d</xliff:g></string>
    <string name="order_summary_price">Total: <xliff:g id="price" example="$0">%s</xliff:g></string>
    <string name="order_summary_email_subject">Just Java Order For <xliff:g id="name" example="Amy">%s</xliff:g></string>

</resources>
